# rust-retrofit

./: Cargo.toml
retrofit/: Cargo.toml
retrofit-core/: Cargo.toml
retrofit-core/src/: lib.rs
retrofit-macros/: Cargo.toml
retrofit-macros/src/: header.rs  lib.rs  request.rs  response.rs  service.rs
retrofit-reqwest/: Cargo.toml
retrofit-reqwest/src/: lib.rs
retrofit/examples/: gh.rs
retrofit/examples/gh/: main.rs
retrofit/examples/gh/github/: git.rs  mod.rs  repo.rs  service.rs
retrofit/src/: lib.rs
