[package]
name = "retrofit-macros"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
tracing = "0.1"
case = "1.0"
regex = "1"
lazy_static = "1.4"

proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
