[package]
name = "retrofit-reqwest"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["blocking", "json"]
blocking = ["reqwest/blocking"]
json = ["reqwest/json"]

[dependencies]
reqwest = "0.10"